# sigil

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  SECURITY.md  VERSIONING.md  agent_shares.json  child_disk.img
.claude/: settings.local.json
.github/workflows/: auto-version.yml  ci.yml  mobile.yml  release.yml
artifacts/: README.md
artifacts/agent_shards/: .gitkeep
artifacts/child_disks/: .gitkeep
artifacts/examples/: README.md
crates/sigil-bridge/: Cargo.toml  README.md
crates/sigil-bridge/src/: client.rs  main.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: client.rs  commands.rs  lib.rs  main.rs  tools.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: accumulator.rs  agent.rs  child.rs  crypto.rs  disk.rs  error.rs  expiry.rs  hd.rs  lib.rs  mpc.rs  presig.rs  types.rs  usage.rs
crates/sigil-core/tests/: disk_format_tests.rs  property_tests.rs
crates/sigil-daemon/: Cargo.toml
crates/sigil-daemon/src/: agent_store.rs  config.rs  disk_watcher.rs  error.rs  ipc.rs  lib.rs  main.rs  memory_manager.rs  signer.rs
crates/sigil-daemon/src/ipc/: client.rs  connection.rs  mod.rs  server.rs  types.rs  unix.rs  windows.rs
crates/sigil-frost/: Cargo.toml
crates/sigil-frost/src/: ed25519.rs  error.rs  lib.rs  pallas.rs  presig.rs  ristretto255.rs  taproot.rs  traits.rs
crates/sigil-frost/src/dkg/: ceremony.rs  mod.rs  qr.rs  types.rs
crates/sigil-mcp/: Cargo.toml  README.md
crates/sigil-mcp/src/: client.rs  lib.rs  main.rs  server.rs
crates/sigil-mcp/src/handlers/: mod.rs
crates/sigil-mcp/src/invariants/: mod.rs
crates/sigil-mcp/src/prompts/: mod.rs
crates/sigil-mcp/src/protocol/: capabilities.rs  jsonrpc.rs  lifecycle.rs  messages.rs  mod.rs
crates/sigil-mcp/src/resources/: mod.rs
crates/sigil-mcp/src/tools/: check_disk.rs  get_address.rs  mod.rs  sign_evm.rs  sign_frost.rs  update_tx_hash.rs
crates/sigil-mcp/src/transport/: mod.rs  stdio.rs
crates/sigil-mcp/tests/: protocol_integration.rs
crates/sigil-mother/: Cargo.toml
crates/sigil-mother-tui/: Cargo.toml
crates/sigil-mother-tui/src/: lib.rs  main.rs
crates/sigil-mother-tui/src/app/: config.rs  events.rs  mod.rs  router.rs  state.rs
crates/sigil-mother-tui/src/auth/: lockout.rs  mod.rs  pin.rs  session.rs
crates/sigil-mother-tui/src/operations/: ceremony.rs  disk_io.rs  mod.rs  proof.rs
crates/sigil-mother-tui/src/reports/: mod.rs
crates/sigil-mother-tui/src/ui/: layout.rs  mod.rs  theme.rs
crates/sigil-mother-tui/src/ui/components/: confirm.rs  floppy.rs  header.rs  help.rs  logo.rs  mod.rs  notification.rs  progress.rs  qr_display.rs  status_bar.rs  table.rs
crates/sigil-mother-tui/src/ui/screens/: confirm.rs  dashboard.rs  help.rs  lockout.rs  mod.rs  pin_entry.rs  pin_setup.rs  reconciliation.rs  reports.rs  settings.rs  splash.rs
crates/sigil-mother-tui/src/ui/screens/agents/: create.rs  detail.rs  list.rs  mod.rs  nullify.rs
crates/sigil-mother-tui/src/ui/screens/children/: create.rs  detail.rs  list.rs  mod.rs
crates/sigil-mother-tui/src/ui/screens/disk/: format.rs  mod.rs  select.rs  status.rs
crates/sigil-mother-tui/src/ui/screens/qr/: display.rs  mod.rs
crates/sigil-mother-tui/src/utils/: mod.rs
crates/sigil-mother-zkvm/: Cargo.toml
crates/sigil-mother-zkvm/programs/batch/: Cargo.toml
crates/sigil-mother-zkvm/programs/batch/elf/: riscv32im-succinct-zkvm-elf
crates/sigil-mother-zkvm/programs/batch/src/: main.rs
crates/sigil-mother-zkvm/programs/derive/: Cargo.toml
crates/sigil-mother-zkvm/programs/derive/elf/: riscv32im-succinct-zkvm-elf
crates/sigil-mother-zkvm/programs/derive/src/: main.rs
crates/sigil-mother-zkvm/programs/hardware/: Cargo.toml
crates/sigil-mother-zkvm/programs/hardware/elf/: riscv32im-succinct-zkvm-elf
crates/sigil-mother-zkvm/programs/hardware/src/: main.rs
crates/sigil-mother-zkvm/programs/keygen/: Cargo.toml
crates/sigil-mother-zkvm/programs/keygen/elf/: riscv32im-succinct-zkvm-elf
crates/sigil-mother-zkvm/programs/keygen/src/: main.rs
crates/sigil-mother-zkvm/src/: error.rs  lib.rs  merkle.rs  types.rs
crates/sigil-mother-zkvm/src/provers/: batch_presig.rs  derive.rs  hardware.rs  keygen.rs  mock.rs  mod.rs
crates/sigil-mother-zkvm/src/storage/: mod.rs
crates/sigil-mother-zkvm/src/verifiers/: batch_presig.rs  derive.rs  hardware.rs  keygen.rs  mod.rs
crates/sigil-mother/src/: accumulator_publish.rs  agent_registry.rs  agent_shard_encryption.rs  ceremony.rs  disk_ops.rs  error.rs  keygen.rs  ledger.rs  lib.rs  main.rs  nullification.rs  presig_gen.rs  reconciliation.rs  registry.rs  storage.rs  zkvm.rs
crates/sigil-mother/src/auth/: encrypted_storage.rs  lockout.rs  mod.rs  pin.rs  session.rs
crates/sigil-mother/src/hardware/: ledger.rs  mod.rs  pkcs11.rs  trezor.rs
crates/sigil-mother/tests/: ceremony_tests.rs
crates/sigil-tests/: Cargo.toml
crates/sigil-tests/src/: lib.rs
crates/sigil-tests/tests/: e2e_workflow_test.rs
crates/sigil-zkvm/: Cargo.toml
crates/sigil-zkvm/src/: lib.rs  main.rs  signing.rs  types.rs
docs/: CNAME  E2E_TEST_PLAN.md  FROST.md  MCP_INTEGRATION_PLAN.md  RECOVERY.md  SIGIL_MOTHER_TUI_PLAN.md  THREAT_MODEL.md  index.html
docs/css/: docs.css  styles.css
docs/docs/: frost.html  recovery.html  timing-safety.html  zkvm-proofs.html
docs/js/: main.js
documentation/: CRYPTO_SPEC.md  E2E_TEST_PLAN.md  GENESIS_OPERATIONS.md  MCP_INTEGRATION_PLAN.md  TIMING_SAFETY.md  ZKVM_PROOFS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_derivation_path.rs  fuzz_disk_format.rs  fuzz_disk_header.rs  fuzz_presig.rs  fuzz_usage_log.rs
mobile/: DEMO.md  README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: app_router.dart  main.dart
proto/: signer.proto
scripts/: bump-version.sh  enable-daemon.sh  generate_example_artifacts.sh  install.sh
scripts/udev-rules/: 99-sigil.rules  sigil-daemon.service
sigil_mother_data/: child_registry.json  master_shard.json
src/: blockchain.rs  crypto.rs  error.rs  keyshard.rs  lib.rs  storage.rs
tests/: e2e_workflow_test.rs
(+43 files in other folders)
