[workspace]
members = [
    "crates/sigil-core",
    "crates/sigil-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chippr Robotics"]
license = "MIT"
repository = "https://github.com/chippr-robotics/sigil"

[workspace.dependencies]
# Cryptography
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-big-array = "0.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File I/O
walkdir = "2.4"

# Async
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
