[workspace]
resolver = "2"
members = [
    "crates/sigil-core",
    "crates/sigil-zkvm",
    "crates/sigil-daemon",
    "crates/sigil-cli",
    "crates/sigil-mother",
    "crates/sigil-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chippr-robotics/sigil"
authors = ["Chippr Robotics"]

[workspace.dependencies]
# Internal crates
sigil-core = { path = "crates/sigil-core" }
sigil-zkvm = { path = "crates/sigil-zkvm" }
sigil-daemon = { path = "crates/sigil-daemon" }
sigil-cli = { path = "crates/sigil-cli" }
sigil-mother = { path = "crates/sigil-mother" }

# Cryptography
k256 = { version = "0.13", default-features = true, features = ["ecdsa", "arithmetic", "sha256"] }
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# IPC
prost = "0.12"
tonic = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Disk detection (Linux)
tokio-udev = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SP1 zkVM
sp1-sdk = "4.1"
sp1-zkvm = "4.1"

[profile.release]
lto = true
codegen-units = 1

# Development dependencies shared across workspace
[workspace.dependencies.tempfile]
version = "3.10"

[workspace.dependencies.proptest]
version = "1.4"
