[workspace]
resolver = "2"
members = [
    "crates/sigil-core",
    "crates/sigil-frost",
    "crates/sigil-zkvm",
    "crates/sigil-mother-zkvm",
    "crates/sigil-daemon",
    "crates/sigil-cli",
    "crates/sigil-mother",
    "crates/sigil-mcp",
    "crates/sigil-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chippr-robotics/sigil"
authors = ["Chippr Robotics"]

[workspace.dependencies]
# Internal crates
sigil-core = { path = "crates/sigil-core" }
sigil-frost = { path = "crates/sigil-frost" }
sigil-zkvm = { path = "crates/sigil-zkvm" }
sigil-daemon = { path = "crates/sigil-daemon" }
sigil-cli = { path = "crates/sigil-cli" }
sigil-mother = { path = "crates/sigil-mother" }
sigil-mother-zkvm = { path = "crates/sigil-mother-zkvm" }
sigil-mcp = { path = "crates/sigil-mcp" }

# Cryptography
k256 = { version = "0.13", default-features = true, features = ["ecdsa", "arithmetic", "sha256"] }
sha3 = "0.10"

# FROST threshold signatures (Zcash Foundation)
frost-core = "2.1"
frost-secp256k1-tr = "2.1"
frost-ed25519 = "2.1"
frost-ristretto255 = "2.1"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcode = "0.6"
hex = "0.4"

# Hardware wallet/HSM support (optional)
ledger-transport = "0.11"
ledger-transport-hid = "0.11"
ledger-apdu = "0.11"
trezor-client = "0.1"
cryptoki = "0.7"
async-trait = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# IPC
prost = "0.12"
tonic = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Disk detection (Linux)
tokio-udev = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# QR code support for air-gapped communication
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# SP1 zkVM
sp1-sdk = "4.1"
sp1-zkvm = "4.1"

[profile.release]
lto = true
codegen-units = 1

# Development dependencies shared across workspace
[workspace.dependencies.tempfile]
version = "3.10"

[workspace.dependencies.proptest]
version = "1.4"
