[package]
name = "sigil-bridge"
version = "0.1.0"
edition = "2021"
description = "HTTP bridge server for sigil-daemon - enables mobile app communication"
license = "MIT"
readme = "README.md"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
sigil-daemon = { path = "../sigil-daemon" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

[features]
default = []
