[package]
name = "sigil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude CLI tools for Sigil MPC signing"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
sigil-core = { workspace = true }
sigil-daemon = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# IPC
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
