[package]
name = "sigil-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System daemon for Sigil disk watching and IPC"

[[bin]]
name = "sigil-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sigil-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# IPC
prost = { workspace = true }
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
hex = { workspace = true }

# Cryptography
k256 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# File matching
glob = "0.3"

# Async utilities
futures-util = "0.3"

# Platform-specific disk detection
[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
