[package]
name = "sigil-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server for Sigil MPC signing"

[[bin]]
name = "sigil-mcp"
path = "src/main.rs"

[dependencies]
# Internal crates
sigil-core = { workspace = true }
sigil-daemon = { workspace = true }
sigil-cli = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID for session IDs
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
