[package]
name = "sigil-mother-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal User Interface for Sigil Mother - Air-Gapped MPC Guardian"
license = "MIT"
repository = "https://github.com/chippr-robotics/sigil"
keywords = ["mpc", "threshold-signatures", "tui", "cryptocurrency", "wallet"]
categories = ["command-line-interface", "cryptography"]

[[bin]]
name = "sigil-mother-tui"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1.35", features = ["full", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# UI Extensions
tui-textarea = "0.6"
unicode-width = "0.2"

# Sigil Core Dependencies
sigil-core = { path = "../sigil-core" }
sigil-mother = { path = "../sigil-mother" }
sigil-frost = { path = "../sigil-frost", optional = true }

# Security
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
dirs = "5.0"

# QR Codes
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex encoding
hex = "0.4"

[dev-dependencies]
rstest = "0.23"
tempfile = "3.10"
tokio-test = "0.4"

[features]
default = []
frost = ["sigil-frost"]

[package.metadata.docs.rs]
all-features = true
