[package]
name = "sigil-mother"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Air-gapped mother device tooling for Sigil MPC"

[[bin]]
name = "sigil-mother"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sigil-core = { workspace = true }

# CLI
clap = { workspace = true }

# Cryptography
k256 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
