[package]
name = "sigil-mother"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Air-gapped mother device tooling for Sigil MPC"

[[bin]]
name = "sigil-mother"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sigil-core = { workspace = true }
sigil-mother-zkvm = { workspace = true, optional = true }

# CLI
clap = { workspace = true }

# Cryptography
k256 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true, optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
hex = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Hardware wallet/HSM support (optional)
async-trait = { workspace = true, optional = true }
ledger-transport = { workspace = true, optional = true }
ledger-transport-hid = { workspace = true, optional = true }
ledger-apdu = { workspace = true, optional = true }
trezor-client = { workspace = true, optional = true }
cryptoki = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
ledger = ["dep:async-trait", "ledger-transport", "ledger-transport-hid", "ledger-apdu"]
trezor = ["dep:async-trait", "trezor-client"]
pkcs11 = ["dep:async-trait", "cryptoki", "sha3"]
# Enable all hardware signers
hardware-all = ["ledger", "trezor", "pkcs11"]
# Enable zkVM proving for mother operations
zkvm = ["sigil-mother-zkvm"]
# Mock provers for testing without SP1
zkvm-mock = ["zkvm", "sigil-mother-zkvm/mock"]
# Real SP1 provers (requires SP1 toolchain)
zkvm-sp1 = ["zkvm", "sigil-mother-zkvm/sp1-prover"]
