[package]
name = "sigil-zkvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SP1 zkVM signing program for Sigil MPC"

[[bin]]
name = "sigil-zkvm-program"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sp1-zkvm = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
