[package]
name = "sigil-mother-zkvm-hardware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigil-mother-zkvm-hardware"
path = "src/main.rs"

[dependencies]
sp1-zkvm = "5.2"
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
