[package]
name = "sigil-mother-zkvm-keygen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigil-mother-zkvm-keygen"
path = "src/main.rs"

[dependencies]
sp1-zkvm = "5.2"
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
